--- a/one/package.json
+++ b/one/package.json
@@ -11,13 +11,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-font-loader": "^1.1.0",
+    "react-loader-spinner": "^4.0.0",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
+    "reactstrap": "^8.9.0",
+    "redux": "^4.1.0",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
     "universal-cookie": "^4.0.4",
