--- a/one/package.json
+++ b/one/package.json
@@ -20,6 +20,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-star-ratings": "^2.3.0",
     "react-transition-group": "^4.4.2",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
