--- a/one/package.json
+++ b/one/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-async": "^10.0.1",
     "react-dom": "^17.0.2",
     "react-google-font-loader": "^1.1.0",
     "react-loader-spinner": "^4.0.0",
