--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.0.2",
     "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
+    "rc-input-number": "^7.2.0",
     "react": "^17.0.2",
     "react-async": "^10.0.1",
     "react-dom": "^17.0.2",
@@ -26,6 +27,7 @@
     "react-scripts": "4.0.3",
     "react-star-ratings": "^2.3.0",
     "react-transition-group": "^1.2.1",
+    "reactjs-popup": "^2.0.5",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
     "styled-components": "^5.3.0",
