--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
+    "@stomp/stompjs": "^6.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -28,10 +29,13 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-star-ratings": "^2.3.0",
+    "react-stomp": "^5.1.0",
     "react-transition-group": "^1.2.1",
     "reactjs-popup": "^2.0.5",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
+    "sockjs": "^0.3.21",
+    "sockjs-client": "^1.5.1",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
     "universal-cookie": "^4.0.4",
