--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scrollbars-custom": "^4.0.27",
     "react-star-ratings": "^2.3.0",
     "react-stomp": "^5.1.0",
     "react-transition-group": "^1.2.1",
