--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.1.0",
     "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
     "navigation": "^5.5.0",
@@ -31,6 +31,7 @@
     "react-scrollbars-custom": "^4.0.27",
     "react-star-ratings": "^2.3.0",
     "react-stomp": "^5.1.0",
+    "react-summernote": "^2.0.2",
     "react-transition-group": "^1.2.1",
     "reactjs-popup": "^2.0.5",
     "reactstrap": "^8.9.0",
