--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
     "navigation": "^5.5.0",
@@ -23,6 +25,7 @@
     "react": "^17.0.2",
     "react-async": "^10.0.1",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-google-font-loader": "^1.1.0",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.4",
@@ -44,7 +47,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --host 0.0.0.0 ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
